# water_strategist

./: .gitignore  CMakeLists.txt  README.md  config.ini.example
src/: config.h  i18n.h  main.cpp
src/input/: gamepad.cpp  gamepad.h
src/net/: http.cpp  http.h
src/strategy/: engine.cpp  engine.h  prompt.cpp  prompt.h
src/telemetry/: frame.h  mock.cpp  mock.h
src/ui/: dashboard.cpp  dashboard.h  settings.cpp  settings.h  theme.cpp  theme.h  tr_button.cpp  tr_button.h
src/voice/: audio.cpp  audio.h  mute_gate.cpp  mute_gate.h  tts.cpp  tts.h
